src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLEPERCENTAGE
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> root
Rule 1     root -> behavior definitions
Rule 2     root -> definitions behavior
Rule 3     behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET
Rule 4     node -> sequence
Rule 5     node -> selector
Rule 6     node -> prob_selector
Rule 7     node -> parallel
Rule 8     node -> decorator
Rule 9     node -> action
Rule 10    node -> condition
Rule 11    sequence -> SEQUENCE COLON LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 12    selector -> SELECTOR COLON LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 13    prob_selector -> PROBSELECTOR COLON LSQUAREBRACKET prob_nodes RSQUAREBRACKET
Rule 14    parallel -> PARALLEL COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 15    decorator -> DECORATOR COLON policy LSQUAREBRACKET node RSQUAREBRACKET
Rule 16    nodes -> nodes COMMA node
Rule 17    nodes -> node
Rule 18    prob_nodes -> prob_nodes COMMA prob_node
Rule 19    prob_nodes -> prob_node
Rule 20    prob_node -> var RIGHTARROW node
Rule 21    policy -> INVERTER
Rule 22    policy -> MAXTRIES
Rule 23    policy -> MAXSECONDS
Rule 24    condition -> CONDITION COLON var
Rule 25    action -> ACTION COLON var
Rule 26    var -> DOLLAR NODENAME
Rule 27    definitions -> definitions definition
Rule 28    definitions -> definition
Rule 29    definition -> sequence_def
Rule 30    definition -> selector_def
Rule 31    definition -> prob_selector_def
Rule 32    definition -> parallel_def
Rule 33    definition -> decorator_def
Rule 34    definition -> action_def
Rule 35    definition -> condition_def
Rule 36    definition -> expression_def
Rule 37    sequence_def -> SEQUENCE NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 38    selector_def -> SELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 39    prob_selector_def -> PROBSELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 40    parallel_def -> PARALLEL NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 41    decorator_def -> DECORATOR NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET
Rule 42    condition_def -> CONDITION NODENAME COLON CODE
Rule 43    action_def -> ACTION NODENAME COLON CODE
Rule 44    expression_def -> EXPRESSION NODENAME COLON CODE

Terminals, with rules where they appear

ACTION               : 25 43
BEHAVIOR             : 3
CODE                 : 42 43 44
COLON                : 11 12 13 14 15 24 25 37 38 39 40 41 42 43 44
COMMA                : 16 18
CONDITION            : 24 42
DECORATOR            : 15 41
DOLLAR               : 26
DOUBLEPERCENTAGE     : 
EXPRESSION           : 44
INT                  : 14 40
INVERTER             : 21
LBRACKET             : 
LSQUAREBRACKET       : 3 11 12 13 14 15 37 38 39 40 41
MAXSECONDS           : 23
MAXTRIES             : 22
NODENAME             : 26 37 38 39 40 41 42 43 44
PARALLEL             : 14 40
PROBSELECTOR         : 13 39
RBRACKET             : 
RIGHTARROW           : 20
RSQUAREBRACKET       : 3 11 12 13 14 15 37 38 39 40 41
SELECTOR             : 12 38
SEQUENCE             : 11 37
error                : 

Nonterminals, with rules where they appear

action               : 9
action_def           : 34
behavior             : 1 2
condition            : 10
condition_def        : 35
decorator            : 8
decorator_def        : 33
definition           : 27 28
definitions          : 1 2 27
expression_def       : 36
node                 : 3 15 16 17 20
nodes                : 11 12 14 16 37 38 39 40 41
parallel             : 7
parallel_def         : 32
policy               : 15 41
prob_node            : 18 19
prob_nodes           : 13 18
prob_selector        : 6
prob_selector_def    : 31
root                 : 0
selector             : 5
selector_def         : 30
sequence             : 4
sequence_def         : 29
var                  : 20 24 25

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . behavior definitions
    (2) root -> . definitions behavior
    (3) behavior -> . BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET
    (27) definitions -> . definitions definition
    (28) definitions -> . definition
    (29) definition -> . sequence_def
    (30) definition -> . selector_def
    (31) definition -> . prob_selector_def
    (32) definition -> . parallel_def
    (33) definition -> . decorator_def
    (34) definition -> . action_def
    (35) definition -> . condition_def
    (36) definition -> . expression_def
    (37) sequence_def -> . SEQUENCE NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (38) selector_def -> . SELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (39) prob_selector_def -> . PROBSELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (40) parallel_def -> . PARALLEL NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (41) decorator_def -> . DECORATOR NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET
    (43) action_def -> . ACTION NODENAME COLON CODE
    (42) condition_def -> . CONDITION NODENAME COLON CODE
    (44) expression_def -> . EXPRESSION NODENAME COLON CODE

    BEHAVIOR        shift and go to state 4
    SEQUENCE        shift and go to state 14
    SELECTOR        shift and go to state 15
    PROBSELECTOR    shift and go to state 16
    PARALLEL        shift and go to state 17
    DECORATOR       shift and go to state 18
    ACTION          shift and go to state 19
    CONDITION       shift and go to state 20
    EXPRESSION      shift and go to state 21

    root                           shift and go to state 1
    behavior                       shift and go to state 2
    definitions                    shift and go to state 3
    definition                     shift and go to state 5
    sequence_def                   shift and go to state 6
    selector_def                   shift and go to state 7
    prob_selector_def              shift and go to state 8
    parallel_def                   shift and go to state 9
    decorator_def                  shift and go to state 10
    action_def                     shift and go to state 11
    condition_def                  shift and go to state 12
    expression_def                 shift and go to state 13

state 1

    (0) S' -> root .



state 2

    (1) root -> behavior . definitions
    (27) definitions -> . definitions definition
    (28) definitions -> . definition
    (29) definition -> . sequence_def
    (30) definition -> . selector_def
    (31) definition -> . prob_selector_def
    (32) definition -> . parallel_def
    (33) definition -> . decorator_def
    (34) definition -> . action_def
    (35) definition -> . condition_def
    (36) definition -> . expression_def
    (37) sequence_def -> . SEQUENCE NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (38) selector_def -> . SELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (39) prob_selector_def -> . PROBSELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (40) parallel_def -> . PARALLEL NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (41) decorator_def -> . DECORATOR NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET
    (43) action_def -> . ACTION NODENAME COLON CODE
    (42) condition_def -> . CONDITION NODENAME COLON CODE
    (44) expression_def -> . EXPRESSION NODENAME COLON CODE

    SEQUENCE        shift and go to state 14
    SELECTOR        shift and go to state 15
    PROBSELECTOR    shift and go to state 16
    PARALLEL        shift and go to state 17
    DECORATOR       shift and go to state 18
    ACTION          shift and go to state 19
    CONDITION       shift and go to state 20
    EXPRESSION      shift and go to state 21

    definitions                    shift and go to state 22
    definition                     shift and go to state 5
    sequence_def                   shift and go to state 6
    selector_def                   shift and go to state 7
    prob_selector_def              shift and go to state 8
    parallel_def                   shift and go to state 9
    decorator_def                  shift and go to state 10
    action_def                     shift and go to state 11
    condition_def                  shift and go to state 12
    expression_def                 shift and go to state 13

state 3

    (2) root -> definitions . behavior
    (27) definitions -> definitions . definition
    (3) behavior -> . BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET
    (29) definition -> . sequence_def
    (30) definition -> . selector_def
    (31) definition -> . prob_selector_def
    (32) definition -> . parallel_def
    (33) definition -> . decorator_def
    (34) definition -> . action_def
    (35) definition -> . condition_def
    (36) definition -> . expression_def
    (37) sequence_def -> . SEQUENCE NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (38) selector_def -> . SELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (39) prob_selector_def -> . PROBSELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (40) parallel_def -> . PARALLEL NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (41) decorator_def -> . DECORATOR NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET
    (43) action_def -> . ACTION NODENAME COLON CODE
    (42) condition_def -> . CONDITION NODENAME COLON CODE
    (44) expression_def -> . EXPRESSION NODENAME COLON CODE

    BEHAVIOR        shift and go to state 4
    SEQUENCE        shift and go to state 14
    SELECTOR        shift and go to state 15
    PROBSELECTOR    shift and go to state 16
    PARALLEL        shift and go to state 17
    DECORATOR       shift and go to state 18
    ACTION          shift and go to state 19
    CONDITION       shift and go to state 20
    EXPRESSION      shift and go to state 21

    behavior                       shift and go to state 23
    definition                     shift and go to state 24
    sequence_def                   shift and go to state 6
    selector_def                   shift and go to state 7
    prob_selector_def              shift and go to state 8
    parallel_def                   shift and go to state 9
    decorator_def                  shift and go to state 10
    action_def                     shift and go to state 11
    condition_def                  shift and go to state 12
    expression_def                 shift and go to state 13

state 4

    (3) behavior -> BEHAVIOR . LSQUAREBRACKET node RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 25


state 5

    (28) definitions -> definition .

    BEHAVIOR        reduce using rule 28 (definitions -> definition .)
    SEQUENCE        reduce using rule 28 (definitions -> definition .)
    SELECTOR        reduce using rule 28 (definitions -> definition .)
    PROBSELECTOR    reduce using rule 28 (definitions -> definition .)
    PARALLEL        reduce using rule 28 (definitions -> definition .)
    DECORATOR       reduce using rule 28 (definitions -> definition .)
    ACTION          reduce using rule 28 (definitions -> definition .)
    CONDITION       reduce using rule 28 (definitions -> definition .)
    EXPRESSION      reduce using rule 28 (definitions -> definition .)
    $end            reduce using rule 28 (definitions -> definition .)


state 6

    (29) definition -> sequence_def .

    BEHAVIOR        reduce using rule 29 (definition -> sequence_def .)
    SEQUENCE        reduce using rule 29 (definition -> sequence_def .)
    SELECTOR        reduce using rule 29 (definition -> sequence_def .)
    PROBSELECTOR    reduce using rule 29 (definition -> sequence_def .)
    PARALLEL        reduce using rule 29 (definition -> sequence_def .)
    DECORATOR       reduce using rule 29 (definition -> sequence_def .)
    ACTION          reduce using rule 29 (definition -> sequence_def .)
    CONDITION       reduce using rule 29 (definition -> sequence_def .)
    EXPRESSION      reduce using rule 29 (definition -> sequence_def .)
    $end            reduce using rule 29 (definition -> sequence_def .)


state 7

    (30) definition -> selector_def .

    BEHAVIOR        reduce using rule 30 (definition -> selector_def .)
    SEQUENCE        reduce using rule 30 (definition -> selector_def .)
    SELECTOR        reduce using rule 30 (definition -> selector_def .)
    PROBSELECTOR    reduce using rule 30 (definition -> selector_def .)
    PARALLEL        reduce using rule 30 (definition -> selector_def .)
    DECORATOR       reduce using rule 30 (definition -> selector_def .)
    ACTION          reduce using rule 30 (definition -> selector_def .)
    CONDITION       reduce using rule 30 (definition -> selector_def .)
    EXPRESSION      reduce using rule 30 (definition -> selector_def .)
    $end            reduce using rule 30 (definition -> selector_def .)


state 8

    (31) definition -> prob_selector_def .

    BEHAVIOR        reduce using rule 31 (definition -> prob_selector_def .)
    SEQUENCE        reduce using rule 31 (definition -> prob_selector_def .)
    SELECTOR        reduce using rule 31 (definition -> prob_selector_def .)
    PROBSELECTOR    reduce using rule 31 (definition -> prob_selector_def .)
    PARALLEL        reduce using rule 31 (definition -> prob_selector_def .)
    DECORATOR       reduce using rule 31 (definition -> prob_selector_def .)
    ACTION          reduce using rule 31 (definition -> prob_selector_def .)
    CONDITION       reduce using rule 31 (definition -> prob_selector_def .)
    EXPRESSION      reduce using rule 31 (definition -> prob_selector_def .)
    $end            reduce using rule 31 (definition -> prob_selector_def .)


state 9

    (32) definition -> parallel_def .

    BEHAVIOR        reduce using rule 32 (definition -> parallel_def .)
    SEQUENCE        reduce using rule 32 (definition -> parallel_def .)
    SELECTOR        reduce using rule 32 (definition -> parallel_def .)
    PROBSELECTOR    reduce using rule 32 (definition -> parallel_def .)
    PARALLEL        reduce using rule 32 (definition -> parallel_def .)
    DECORATOR       reduce using rule 32 (definition -> parallel_def .)
    ACTION          reduce using rule 32 (definition -> parallel_def .)
    CONDITION       reduce using rule 32 (definition -> parallel_def .)
    EXPRESSION      reduce using rule 32 (definition -> parallel_def .)
    $end            reduce using rule 32 (definition -> parallel_def .)


state 10

    (33) definition -> decorator_def .

    BEHAVIOR        reduce using rule 33 (definition -> decorator_def .)
    SEQUENCE        reduce using rule 33 (definition -> decorator_def .)
    SELECTOR        reduce using rule 33 (definition -> decorator_def .)
    PROBSELECTOR    reduce using rule 33 (definition -> decorator_def .)
    PARALLEL        reduce using rule 33 (definition -> decorator_def .)
    DECORATOR       reduce using rule 33 (definition -> decorator_def .)
    ACTION          reduce using rule 33 (definition -> decorator_def .)
    CONDITION       reduce using rule 33 (definition -> decorator_def .)
    EXPRESSION      reduce using rule 33 (definition -> decorator_def .)
    $end            reduce using rule 33 (definition -> decorator_def .)


state 11

    (34) definition -> action_def .

    BEHAVIOR        reduce using rule 34 (definition -> action_def .)
    SEQUENCE        reduce using rule 34 (definition -> action_def .)
    SELECTOR        reduce using rule 34 (definition -> action_def .)
    PROBSELECTOR    reduce using rule 34 (definition -> action_def .)
    PARALLEL        reduce using rule 34 (definition -> action_def .)
    DECORATOR       reduce using rule 34 (definition -> action_def .)
    ACTION          reduce using rule 34 (definition -> action_def .)
    CONDITION       reduce using rule 34 (definition -> action_def .)
    EXPRESSION      reduce using rule 34 (definition -> action_def .)
    $end            reduce using rule 34 (definition -> action_def .)


state 12

    (35) definition -> condition_def .

    BEHAVIOR        reduce using rule 35 (definition -> condition_def .)
    SEQUENCE        reduce using rule 35 (definition -> condition_def .)
    SELECTOR        reduce using rule 35 (definition -> condition_def .)
    PROBSELECTOR    reduce using rule 35 (definition -> condition_def .)
    PARALLEL        reduce using rule 35 (definition -> condition_def .)
    DECORATOR       reduce using rule 35 (definition -> condition_def .)
    ACTION          reduce using rule 35 (definition -> condition_def .)
    CONDITION       reduce using rule 35 (definition -> condition_def .)
    EXPRESSION      reduce using rule 35 (definition -> condition_def .)
    $end            reduce using rule 35 (definition -> condition_def .)


state 13

    (36) definition -> expression_def .

    BEHAVIOR        reduce using rule 36 (definition -> expression_def .)
    SEQUENCE        reduce using rule 36 (definition -> expression_def .)
    SELECTOR        reduce using rule 36 (definition -> expression_def .)
    PROBSELECTOR    reduce using rule 36 (definition -> expression_def .)
    PARALLEL        reduce using rule 36 (definition -> expression_def .)
    DECORATOR       reduce using rule 36 (definition -> expression_def .)
    ACTION          reduce using rule 36 (definition -> expression_def .)
    CONDITION       reduce using rule 36 (definition -> expression_def .)
    EXPRESSION      reduce using rule 36 (definition -> expression_def .)
    $end            reduce using rule 36 (definition -> expression_def .)


state 14

    (37) sequence_def -> SEQUENCE . NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    NODENAME        shift and go to state 26


state 15

    (38) selector_def -> SELECTOR . NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    NODENAME        shift and go to state 27


state 16

    (39) prob_selector_def -> PROBSELECTOR . NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    NODENAME        shift and go to state 28


state 17

    (40) parallel_def -> PARALLEL . NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET

    NODENAME        shift and go to state 29


state 18

    (41) decorator_def -> DECORATOR . NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET

    NODENAME        shift and go to state 30


state 19

    (43) action_def -> ACTION . NODENAME COLON CODE

    NODENAME        shift and go to state 31


state 20

    (42) condition_def -> CONDITION . NODENAME COLON CODE

    NODENAME        shift and go to state 32


state 21

    (44) expression_def -> EXPRESSION . NODENAME COLON CODE

    NODENAME        shift and go to state 33


state 22

    (1) root -> behavior definitions .
    (27) definitions -> definitions . definition
    (29) definition -> . sequence_def
    (30) definition -> . selector_def
    (31) definition -> . prob_selector_def
    (32) definition -> . parallel_def
    (33) definition -> . decorator_def
    (34) definition -> . action_def
    (35) definition -> . condition_def
    (36) definition -> . expression_def
    (37) sequence_def -> . SEQUENCE NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (38) selector_def -> . SELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (39) prob_selector_def -> . PROBSELECTOR NODENAME COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (40) parallel_def -> . PARALLEL NODENAME COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (41) decorator_def -> . DECORATOR NODENAME COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET
    (43) action_def -> . ACTION NODENAME COLON CODE
    (42) condition_def -> . CONDITION NODENAME COLON CODE
    (44) expression_def -> . EXPRESSION NODENAME COLON CODE

    $end            reduce using rule 1 (root -> behavior definitions .)
    SEQUENCE        shift and go to state 14
    SELECTOR        shift and go to state 15
    PROBSELECTOR    shift and go to state 16
    PARALLEL        shift and go to state 17
    DECORATOR       shift and go to state 18
    ACTION          shift and go to state 19
    CONDITION       shift and go to state 20
    EXPRESSION      shift and go to state 21

    definition                     shift and go to state 24
    sequence_def                   shift and go to state 6
    selector_def                   shift and go to state 7
    prob_selector_def              shift and go to state 8
    parallel_def                   shift and go to state 9
    decorator_def                  shift and go to state 10
    action_def                     shift and go to state 11
    condition_def                  shift and go to state 12
    expression_def                 shift and go to state 13

state 23

    (2) root -> definitions behavior .

    $end            reduce using rule 2 (root -> definitions behavior .)


state 24

    (27) definitions -> definitions definition .

    BEHAVIOR        reduce using rule 27 (definitions -> definitions definition .)
    SEQUENCE        reduce using rule 27 (definitions -> definitions definition .)
    SELECTOR        reduce using rule 27 (definitions -> definitions definition .)
    PROBSELECTOR    reduce using rule 27 (definitions -> definitions definition .)
    PARALLEL        reduce using rule 27 (definitions -> definitions definition .)
    DECORATOR       reduce using rule 27 (definitions -> definitions definition .)
    ACTION          reduce using rule 27 (definitions -> definitions definition .)
    CONDITION       reduce using rule 27 (definitions -> definitions definition .)
    EXPRESSION      reduce using rule 27 (definitions -> definitions definition .)
    $end            reduce using rule 27 (definitions -> definitions definition .)


state 25

    (3) behavior -> BEHAVIOR LSQUAREBRACKET . node RSQUAREBRACKET
    (4) node -> . sequence
    (5) node -> . selector
    (6) node -> . prob_selector
    (7) node -> . parallel
    (8) node -> . decorator
    (9) node -> . action
    (10) node -> . condition
    (11) sequence -> . SEQUENCE COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (12) selector -> . SELECTOR COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (13) prob_selector -> . PROBSELECTOR COLON LSQUAREBRACKET prob_nodes RSQUAREBRACKET
    (14) parallel -> . PARALLEL COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (15) decorator -> . DECORATOR COLON policy LSQUAREBRACKET node RSQUAREBRACKET
    (25) action -> . ACTION COLON var
    (24) condition -> . CONDITION COLON var

    SEQUENCE        shift and go to state 42
    SELECTOR        shift and go to state 43
    PROBSELECTOR    shift and go to state 44
    PARALLEL        shift and go to state 45
    DECORATOR       shift and go to state 46
    ACTION          shift and go to state 47
    CONDITION       shift and go to state 48

    node                           shift and go to state 34
    sequence                       shift and go to state 35
    selector                       shift and go to state 36
    prob_selector                  shift and go to state 37
    parallel                       shift and go to state 38
    decorator                      shift and go to state 39
    action                         shift and go to state 40
    condition                      shift and go to state 41

state 26

    (37) sequence_def -> SEQUENCE NODENAME . COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 49


state 27

    (38) selector_def -> SELECTOR NODENAME . COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 50


state 28

    (39) prob_selector_def -> PROBSELECTOR NODENAME . COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 51


state 29

    (40) parallel_def -> PARALLEL NODENAME . COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 52


state 30

    (41) decorator_def -> DECORATOR NODENAME . COLON policy LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 53


state 31

    (43) action_def -> ACTION NODENAME . COLON CODE

    COLON           shift and go to state 54


state 32

    (42) condition_def -> CONDITION NODENAME . COLON CODE

    COLON           shift and go to state 55


state 33

    (44) expression_def -> EXPRESSION NODENAME . COLON CODE

    COLON           shift and go to state 56


state 34

    (3) behavior -> BEHAVIOR LSQUAREBRACKET node . RSQUAREBRACKET

    RSQUAREBRACKET  shift and go to state 57


state 35

    (4) node -> sequence .

    RSQUAREBRACKET  reduce using rule 4 (node -> sequence .)
    COMMA           reduce using rule 4 (node -> sequence .)


state 36

    (5) node -> selector .

    RSQUAREBRACKET  reduce using rule 5 (node -> selector .)
    COMMA           reduce using rule 5 (node -> selector .)


state 37

    (6) node -> prob_selector .

    RSQUAREBRACKET  reduce using rule 6 (node -> prob_selector .)
    COMMA           reduce using rule 6 (node -> prob_selector .)


state 38

    (7) node -> parallel .

    RSQUAREBRACKET  reduce using rule 7 (node -> parallel .)
    COMMA           reduce using rule 7 (node -> parallel .)


state 39

    (8) node -> decorator .

    RSQUAREBRACKET  reduce using rule 8 (node -> decorator .)
    COMMA           reduce using rule 8 (node -> decorator .)


state 40

    (9) node -> action .

    RSQUAREBRACKET  reduce using rule 9 (node -> action .)
    COMMA           reduce using rule 9 (node -> action .)


state 41

    (10) node -> condition .

    RSQUAREBRACKET  reduce using rule 10 (node -> condition .)
    COMMA           reduce using rule 10 (node -> condition .)


state 42

    (11) sequence -> SEQUENCE . COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 58


state 43

    (12) selector -> SELECTOR . COLON LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 59


state 44

    (13) prob_selector -> PROBSELECTOR . COLON LSQUAREBRACKET prob_nodes RSQUAREBRACKET

    COLON           shift and go to state 60


state 45

    (14) parallel -> PARALLEL . COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET

    COLON           shift and go to state 61


state 46

    (15) decorator -> DECORATOR . COLON policy LSQUAREBRACKET node RSQUAREBRACKET

    COLON           shift and go to state 62


state 47

    (25) action -> ACTION . COLON var

    COLON           shift and go to state 63


state 48

    (24) condition -> CONDITION . COLON var

    COLON           shift and go to state 64


state 49

    (37) sequence_def -> SEQUENCE NODENAME COLON . LSQUAREBRACKET nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 65


state 50

    (38) selector_def -> SELECTOR NODENAME COLON . LSQUAREBRACKET nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 66


state 51

    (39) prob_selector_def -> PROBSELECTOR NODENAME COLON . LSQUAREBRACKET nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 67


state 52

    (40) parallel_def -> PARALLEL NODENAME COLON . INT LSQUAREBRACKET nodes RSQUAREBRACKET

    INT             shift and go to state 68


state 53

    (41) decorator_def -> DECORATOR NODENAME COLON . policy LSQUAREBRACKET nodes RSQUAREBRACKET
    (21) policy -> . INVERTER
    (22) policy -> . MAXTRIES
    (23) policy -> . MAXSECONDS

    INVERTER        shift and go to state 70
    MAXTRIES        shift and go to state 71
    MAXSECONDS      shift and go to state 72

    policy                         shift and go to state 69

state 54

    (43) action_def -> ACTION NODENAME COLON . CODE

    CODE            shift and go to state 73


state 55

    (42) condition_def -> CONDITION NODENAME COLON . CODE

    CODE            shift and go to state 74


state 56

    (44) expression_def -> EXPRESSION NODENAME COLON . CODE

    CODE            shift and go to state 75


state 57

    (3) behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .

    SEQUENCE        reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    SELECTOR        reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    PROBSELECTOR    reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    PARALLEL        reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    DECORATOR       reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    ACTION          reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    CONDITION       reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    EXPRESSION      reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)
    $end            reduce using rule 3 (behavior -> BEHAVIOR LSQUAREBRACKET node RSQUAREBRACKET .)


state 58

    (11) sequence -> SEQUENCE COLON . LSQUAREBRACKET nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 76


state 59

    (12) selector -> SELECTOR COLON . LSQUAREBRACKET nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 77


state 60

    (13) prob_selector -> PROBSELECTOR COLON . LSQUAREBRACKET prob_nodes RSQUAREBRACKET

    LSQUAREBRACKET  shift and go to state 78


state 61

    (14) parallel -> PARALLEL COLON . INT LSQUAREBRACKET nodes RSQUAREBRACKET

    INT             shift and go to state 79


state 62

    (15) decorator -> DECORATOR COLON . policy LSQUAREBRACKET node RSQUAREBRACKET
    (21) policy -> . INVERTER
    (22) policy -> . MAXTRIES
    (23) policy -> . MAXSECONDS

    INVERTER        shift and go to state 70
    MAXTRIES        shift and go to state 71
    MAXSECONDS      shift and go to state 72

    policy                         shift and go to state 80

state 63

    (25) action -> ACTION COLON . var
    (26) var -> . DOLLAR NODENAME

    DOLLAR          shift and go to state 82

    var                            shift and go to state 81

state 64

    (24) condition -> CONDITION COLON . var
    (26) var -> . DOLLAR NODENAME

    DOLLAR          shift and go to state 82

    var                            shift and go to state 83

state 65

    (37) sequence_def -> SEQUENCE NODENAME COLON LSQUAREBRACKET . nodes RSQUAREBRACKET
    (16) nodes -> . nodes COMMA node
    (17) nodes -> . node
    (4) node -> . sequence
    (5) node -> . selector
    (6) node -> . prob_selector
    (7) node -> . parallel
    (8) node -> . decorator
    (9) node -> . action
    (10) node -> . condition
    (11) sequence -> . SEQUENCE COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (12) selector -> . SELECTOR COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (13) prob_selector -> . PROBSELECTOR COLON LSQUAREBRACKET prob_nodes RSQUAREBRACKET
    (14) parallel -> . PARALLEL COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (15) decorator -> . DECORATOR COLON policy LSQUAREBRACKET node RSQUAREBRACKET
    (25) action -> . ACTION COLON var
    (24) condition -> . CONDITION COLON var

    SEQUENCE        shift and go to state 42
    SELECTOR        shift and go to state 43
    PROBSELECTOR    shift and go to state 44
    PARALLEL        shift and go to state 45
    DECORATOR       shift and go to state 46
    ACTION          shift and go to state 47
    CONDITION       shift and go to state 48

    nodes                          shift and go to state 84
    node                           shift and go to state 85
    sequence                       shift and go to state 35
    selector                       shift and go to state 36
    prob_selector                  shift and go to state 37
    parallel                       shift and go to state 38
    decorator                      shift and go to state 39
    action                         shift and go to state 40
    condition                      shift and go to state 41

state 66

    (38) selector_def -> SELECTOR NODENAME COLON LSQUAREBRACKET . nodes RSQUAREBRACKET
    (16) nodes -> . nodes COMMA node
    (17) nodes -> . node
    (4) node -> . sequence
    (5) node -> . selector
    (6) node -> . prob_selector
    (7) node -> . parallel
    (8) node -> . decorator
    (9) node -> . action
    (10) node -> . condition
    (11) sequence -> . SEQUENCE COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (12) selector -> . SELECTOR COLON LSQUAREBRACKET nodes RSQUAREBRACKET
    (13) prob_selector -> . PROBSELECTOR COLON LSQUAREBRACKET prob_nodes RSQUAREBRACKET
    (14) parallel -> . PARALLEL COLON INT LSQUAREBRACKET nodes RSQUAREBRACKET
    (15) decorator -> . DECORATOR COLON policy LSQUAREBRACKET node RSQUAREBRACKET
    (25) action -> . ACTION COLON var
    (24) condition -> . CONDITION COLON var

    SEQUENCE        shift and go to state 42
    SELECTOR        shift and go to state 43
    PROBSELECTOR    shift and go to state 44
    PARALLEL        shift and go to state 45
    DECORATOR       shift and go to state 46
    ACTION          shift and go to state 47
    CONDITION       shift and go to state 48

    nodes                          shift and go to state 86
    node                           shift and go to state 85
    sequence                       shift and go to state 35
    selector                       shift and go to state 36
    prob_selector                  shift and go to state 37
    parallel                       shift and go to state 38
    decorator                      shift and go to state 39
    action                         shift and go to state 40
    condition                      shift and go to state 41

state 67
